LogOutput/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: hashgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
      containers:
        - name: log-writer
          image: log-writer:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
        - name: log-reader
          image: log-reader:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
